tests/compile_fail/invalid_body_after_substitution.stderr
error: failed to parse delegate arm body
  --> tests/compile_fail/invalid_body_after_substitution.rs:11:36
   |
11 |               E::{ A: ??, B: ?? } => {
   |  ____________________________________^
12 | |                 // Substitution of `$assoc_ts` yields `??`, which is not a valid Rust expr.
13 | |                 $assoc_ts
14 | |             }
   | |_____________^

error: failed to parse expr after substitution
  --> tests/compile_fail/invalid_body_after_substitution.rs:11:36
   |
11 |               E::{ A: ??, B: ?? } => {
   |  ____________________________________^
12 | |                 // Substitution of `$assoc_ts` yields `??`, which is not a valid Rust expr.
13 | |                 $assoc_ts
14 | |             }
   | |_____________^

error: expected an expression
  --> tests/compile_fail/invalid_body_after_substitution.rs:11:21
   |
11 |             E::{ A: ??, B: ?? } => {
   |                     ^
